css/style.css
/* ... */
.navbar-fixed {
  background: #fff;
  transition: 0.5s ease-out;
  box-shadow:
    0 2px 2px 0 rgba(0, 0, 0, 0),
    0 1px 5px 0 rgba(0, 0, 0, 0.12),
    0 3px 1px -2px rgba(0, 0, 0, 0);
}

.navbar-fixed .navbar-brand {
  color: #222;
}

.navbar-fixed .navbar-nav li a {
  color: #222;
}

.navbar-fixed .navbar-toggler i {
  color: #222;
}

.navbar-transparent {
  background: transparent !important;
}

/* about us */
.about {
  padding-bottom: 125px;
}

.about .col {
  background: #ed3237;
}

.about img {
  height: 100%;
  background: #766f5f;
}

.about .content {
  padding: 40px;
  color: #fdfdfd;
  background: #ed3237;
}

.about .content h3 {
  color: #fff;
  font-weight: 600;
  font-size: 44px;
}

.about .content span {
  font-size: 16px;
  color: #ed3237;
  margin-bottom: 22px;
  display: block;
}

/* home intro */

.home-intro {
  margin-top: 30px;
  padding: 10px 12 10px !important;
  height: 600px;
  display: flex;
  align-items: center;
  /* Alinha verticalmente os itens */
  justify-content: center;
  /* Centraliza horizontalmente */
  position: relative;
}

.home-intro .content {
  margin-left: 200;
  position: relative;
}

.home-intro .content .button {
  background: #fff;
}

.home-intro .content-text {
  padding: 60px;
}

.home-intro:before,
.home-intro .content:after {
  display: none;
}
/* .home-intro:before {
  width: 400px;
  background: #ed3237;
  height: calc(100% - 250px);
  border: 8px solid #fff;
  position: absolute;
  content: '';
  z-index: -1;
  margin-left: 200px;
}

.home-intro .content:after {
  width: 400px;
  background: #ed3237;
  height: calc(100% - 250px);
  position: absolute;
  content: '';
  z-index: -1;
  top: 50px;
  left: 12px;
} */

.home-intro .button {
  color: #ed3237;
}

.home-intro .button:hover {
  color: #1e1e1e;
}

.home-intro h5 {
  color: #fff;
  font-size: 14px;

  font-weight: 300;
}

.home-intro h2 {
  color: #fff;
  font-size: 52px;
  font-weight: 700;
  margin: 25px 0;
  line-height: 54px;
  letter-spacing: 1px;
}
.highlight {
  background-color: white;
  color: red;
  padding: 1px 5px;
  font-weight: 300;
}
.highlight span {
  background-color: white;
  color: red;
  padding: 1px 5px;
  font-weight: 300;
}

.home-intro h6 {
  color: #fff;
  line-height: 25px;
  font-size: 16px;
  margin-bottom: 15px;
  width: 100%;
  font-weight: 300;
  position: relative;
}

.img-hero {
  height: 400px;
  display: flex;
  padding: 30px;
}

/* section */
.section {
  padding: 100px 0 120px;
}

.section-no-title {
  padding: 120px 0 120px;
}

.section-top {
  padding-top: 125px;
}

.title-section {
  margin-bottom: 50px;
}

.title-section h3 {
  font-weight: 700;
  font-size: 42px;
  margin-bottom: 5px;
}

.title-section h3 span {
  color: #dd3237;
}

.title-section-left {
  margin-bottom: 0;
}

.title-section-left h3 {
  font-size: 40px;
  font-weight: 600;
}

.title-section-left h3 span {
  color: #dd3237;
}

.title-section p {
  margin: auto;
  line-height: 30px;
  font-size: 20px;
  font-weight: 300;
}

.title-section p span {
  width: 50px;
  height: 3px;
  background: #dd3237;
  display: block;
  display: inline-block;
  position: relative;
  top: -5px;
  margin-right: 20px;
}

.title-section-two {
  text-align: left;
}

.title-section-two p {
  width: 100%;
}

/* services */
.services {
  padding: 100px 0 90px;
}

.services .content {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding: 30px;
  margin-bottom: 30px;
  box-shadow: 0 12px 30px -15px rgba(0, 0, 0, 0.2);
  border-left: 4px solid #ed3237;
  position: relative;
  transition: 0.6s ease-out;
  height: 100%;
  right: 100%;
  left: 0;
  z-index: 99;
}

.services .content1 {
  background-image: url('../images/produto1.jpg');
}

.services .content2 {
  background-image: url('../images/produto2.jpg');
}

.services .content3 {
  background-image: url('../images/produto3.jpg');
}
.services .content4 {
  background-image: url('../images/produto4.jpg');
}
.services .content h5 {
  font-weight: 600;
  color: #ed3237;
}
.services .content p {
  font-weight: 400;
  color: #ed3237;
}

.bg-special {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23c6c0c0' fill-opacity='0.13'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.13'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
}
/* ... */

